# hoxcore

./: .cursorrules  .gitignore  .windsurfrules  ARCHITECTURE.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  publish-develop.yml  publish.yml
docs/: 404.html  API.md  COMMANDS.md  ENTITY_MODEL.md  Gemfile  MCP_INTEGRATION.md  README.md  _config.yml  ai-features.html  cli-reference.html  core-concepts.html  getting-started.html  index.html  integrations.html  pr-show-operation-unification.md  pr_get_operation_refactor.md  templates.html
docs/.sass-cache/a4cc1bd11fae4124d2815665f66d3fc2956ed459/: fonts.scssc  jekyll-theme-minimal.scssc  rouge-github.scssc
docs/_site/: feed.xml  index.html  integrations.html  robots.txt  sitemap.xml
docs/_site/css/: style.css
docs/_site/js/: main.js
docs/css/: style.css
docs/js/: main.js  version.js
manager/: __init__.py  cli.py  core.py  registry.py
src/hxc/: __init__.py  cli.py
src/hxc/commands/: __init__.py  base.py  cmd_list.py  command1.py  command2.py  create.py  delete.py  edit.py  get.py  init.py  mcp.py  registry.py  show.py  template.py  validate.py
src/hxc/core/: __init__.py  config.py  enums.py
src/hxc/core/operations/: __init__.py  create.py  delete.py  edit.py  get.py  init.py  list.py  registry.py  scaffold.py  show.py  validate.py
src/hxc/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/hxc/templates/: __init__.py  executor.py  parser.py  resolver.py  schema.py  variables.py
src/hxc/utils/: git.py  helpers.py  path_security.py
standards/: model_definition_example.yml
tests/: conftest.py  test_cli.py
tests/commands/: test_command1.py  test_command2.py  test_create.py  test_create_git.py  test_delete.py  test_delete_git.py  test_edit.py  test_edit_git.py  test_get.py  test_init.py  test_list.py  test_registry.py  test_show.py  test_validate.py
tests/core/: test_enums.py
tests/core/operations/: __init__.py  test_create.py  test_delete.py  test_edit.py  test_get.py  test_init.py  test_list.py  test_registry.py  test_show.py  test_validate.py
tests/mcp/: __init__.py  conftest.py  test_server.py  test_tools.py  test_tools_common.py  test_tools_create.py  test_tools_delete.py  test_tools_edit.py  test_tools_get.py  test_tools_init.py  test_tools_list.py  test_tools_registry.py  test_tools_show.py  test_tools_validate.py
tests/templates/: __init__.py  conftest.py  test_executor.py  test_integration.py  test_parser.py  test_resolver.py  test_schema.py  test_variables.py
tests/utils/: test_git.py  test_path_security.py
